--- a/includes/shortcodes/assets/scss/from-the-blog-list.scss
+++ b/includes/shortcodes/assets/scss/from-the-blog-list.scss
@@ -2,172 +2,156 @@
 {
 	display: block;
 	position: relative;
-}
+	margin-bottom: 2.5rem;
 
-.blog-list-item
-{
-	position: relative;
-	margin:0 -30px;
-}
+	.blog-list-item
+	{
+		position: relative;
+		margin:0 -30px;
+	}
 
-.blog_list_img_link
-{
-	display: block;
-	overflow: hidden;
-	position: relative;
-	
-	width: 100%;
-	
-	-webkit-mask-image: -webkit-radial-gradient(white, black);
-}	
+	.blog_list_img_link
+	{
+		display: block;
+		overflow: hidden;
+		position: relative;
+		width: 100%;
+		-webkit-mask-image: -webkit-radial-gradient(white, black);
+	}	
 
-.blog_list_overlay
-{
-	display: block;
-	background: rgba(0,0,0,0);
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	z-index: 2;
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	-o-transition: all .3s ease;
-	-ms-transition: all .3s ease;
-}
+	.blog_list_overlay
+	{
+		display: block;
+		background: rgba(0,0,0,0);
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+		-webkit-transition: all .3s ease;
+		-moz-transition: all .3s ease;
+		-o-transition: all .3s ease;
+		-ms-transition: all .3s ease;
+	}
 
-.blog_list_img_link:hover .blog_list_overlay
-{
-	background: rgba(0,0,0,0.6);
-}
+	.blog_list_img_link:hover .blog_list_overlay
+	{
+		background: rgba(0,0,0,0.6);
+	}
 
-.blog_list_img
-{
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-position: center center;
-	background-size:cover;
-    -webkit-background-size:cover;
-    -moz-background-size:cover;
-    -o-background-size:cover;
-    -ms-background-size:cover;
-	
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	transition: all 1s ease;
-}
+	.blog_list_img
+	{
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-position: center center;
+		background-size:cover;
+		transition: all 1s ease;
+	}
 
-.blog_list_img_link:hover .blog_list_img
-{
-	transform: translateZ(0) scale(1.1,1.1);
-	-moz-transform: translateZ(0) scale(1.1,1.1);
-	-webkit-transform: translateZ(0) scale(1.1,1.1);
-	-ms-transform: none;
-}
+	.blog_list_img_link:hover .blog_list_img
+	{
+		transform: translateZ(0) scale(1.1,1.1);
+		-ms-transform: none;
+	}
 
-.blog-list-content-wrapper
-{
-	display: table;
-	color: #fff;
-	padding: 50px 0px;
-	
-	width: 100%;
-	
-	position: relative;
-	z-index: 10;
-}
+	.blog-list-content-wrapper
+	{
+		display: table;
+		color: #fff;
+		padding: 50px 0px;
+		width: 100%;
+		position: relative;
+		z-index: 10;
+	}
 
-.blog-list-content-inner
-{
-	display: table-row;
-}
+	.blog-list-content-inner
+	{
+		display: table-row;
+	}
 
-.blog-list-day 
-{
-	display: table-cell;
-	vertical-align: top;
-	
-	font-size: 30px;
-	line-height: 20px;
-	text-align: left;
-	
-	padding-left: 30px;
-	
-	width: 80px;
-	min-width: 80px;
-}
+	.blog-list-day 
+	{
+		display: table-cell;
+		vertical-align: top;
+		font-size: 30px;
+		line-height: 20px;
+		text-align: left;
+		padding-left: 30px;
+		width: 80px;
+		min-width: 80px;
+	}
 
-.blog-list-content
-{
-	display: table-cell;
-	vertical-align: top;
-	
-	padding-left: 18px;
-	padding-right: 30px;
-	border-left: 2px solid;
-}
+	.blog-list-content
+	{
+		display: table-cell;
+		vertical-align: top;
+		padding-left: 18px;
+		padding-right: 30px;
+		border-left: 2px solid;
+	}
 
-.blog-list-date
-{
-	display: block;
-	font-size: 12px;
-	font-weight: 700;
-	text-transform: uppercase;
-	
-	margin: -1px 0 7px 3px;
-}
+	.blog-list-date
+	{
+		display: block;
+		font-size: 12px;
+		font-weight: 700;
+		text-transform: uppercase;
+		margin: -1px 0 7px 3px;
+	}
 
-.blog-list-title
-{
-	font-size: 24px;
-	line-height: 1.2;
-	margin: 0 0 -4px;
+	.blog-list-title
+	{
+		font-size: 24px;
+		line-height: 1.2;
+		margin: 0 0 -4px;
+	}
 }
 
 /* min-width 641px, medium screens */
 @media only screen and (min-width: 40.063em) {
-	.blog-list-item
+
+	.from-the-blog-list-wrapper
 	{
-		margin: 0 0 10px;
-	}
-	
-	.blog-list-item:first-child
-	{
-		margin-top: 10px;
-	}
-	
-	.blog-list-day 
-	{
-		vertical-align: middle;
+		.blog-list-item
+		{
+			margin: 0 0 10px;
+		}
 		
-		font-size: 75px;
-		line-height: 50px;
-		text-align: center;
-	
-		padding-left: 0;
-	
-		width: 170px;
-		min-width: 170px;
-	}
-	
-	.blog-list-content
-	{
-		padding-left: 50px;
-		padding-right: 50px;
-	}
-	
-	.blog-list-date
-	{
-		font-size: 14px;
-		margin: 0 0 5px;
+		.blog-list-item:first-child
+		{
+			margin-top: 10px;
+		}
 		
-	}
-	
-	.blog-list-title
-	{
-		font-size: 30px;
-		line-height: 1.2;
-		margin: 0 0 -3px;
+		.blog-list-day 
+		{
+			vertical-align: middle;
+			font-size: 75px;
+			line-height: 50px;
+			text-align: center;
+			padding-left: 0;
+			width: 170px;
+			min-width: 170px;
+		}
+		
+		.blog-list-content
+		{
+			padding-left: 50px;
+			padding-right: 50px;
+		}
+		
+		.blog-list-date
+		{
+			font-size: 14px;
+			margin: 0 0 5px;
+			
+		}
+		
+		.blog-list-title
+		{
+			font-size: 30px;
+			line-height: 1.2;
+			margin: 0 0 -3px;
+		}
 	}
 }
