--- a/includes/shortcodes/assets/scss/from-the-blog-slider.scss
+++ b/includes/shortcodes/assets/scss/from-the-blog-slider.scss
@@ -1,220 +1,211 @@
-.from-the-blog-wrapper {
-	margin: 30px 0px 0px 0px;
-}
-
-.from_the_blog_item {
-	padding: 0 15px;	
-}
-
-.from_the_blog_item h3 {
-	text-align: center;
-	font-size: 1.457em;
-	line-height: 1.304em;
-	margin: 0 0 12px;
-}
-
-.from_the_blog_item .post_header_date {
-	text-align: center;
-	font-size: 0.875em;
-}
-
-.from_the_blog_item.gallery {
-	margin: 0 !important;
-}
-
-.from_the_blog_overlay
+.from-the-blog-wrapper
 {
-	display: block;
-	background: rgba(0,0,0,0);
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	z-index: 2;
-	-webkit-transition: all .3s ease;
-	-moz-transition: all .3s ease;
-	-o-transition: all .3s ease;
-	-ms-transition: all .3s ease;
+	margin: 0 0 2.5rem 0;
+
+	.from_the_blog_item
+	{
+		padding: 0 15px;	
+		
+		h3
+		{
+			text-align: center;
+			font-size: 1.457em;
+			line-height: 1.304em;
+			margin: 0 0 12px;
+		}
+
+		.post_header_date {
+			text-align: center;
+			font-size: 0.875em;
+		}
+		
+		&.gallery
+		{
+			margin: 0 !important;
+		}
+
+		&:hover
+		{
+			.from_the_blog_overlay
+			{
+				background: rgba(0,0,0,0.6);
+			}
+
+			.from_the_blog_img
+			{
+				transform: translateZ(0) scale(1.1,1.1);
+				-ms-transform: none;
+			}
+		}
+	}
+
+	.from_the_blog_overlay
+	{
+		display: block;
+		background: rgba(0,0,0,0);
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+		transition: all .3s ease;
+	}
+
+	.from_the_blog_img_link
+	{
+		display: block;
+		overflow: hidden;
+		position: relative;
+		height: 245px;
+		width: 100%;
+		margin-bottom: 18px;
+		-webkit-mask-image: -webkit-radial-gradient(white, black);
+	}	
+
+	.from_the_blog_img
+	{
+		display: block;
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		background-position: center center;
+		background-size:cover;
+		transition: all 1s ease;
+	}
+
+	.grabbing .from_the_blog_item:hover .from_the_blog_img
+	{
+		transform: none;
+	}
+
+	.with_thumb_icon
+	{
+		position: absolute;
+		width:50px;
+		height: 50px;
+		display: block;
+		background: #314381;
+		top: 0;
+		left: 0;
+		text-align: center;
+		color: #fff;
+		line-height: 50px;
+		z-index: 3;
+	}
+
+	.no_thumb_icon
+	{
+		line-height: 245px;
+		text-align: center;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		color: #fff;
+		z-index: 3;
+	}
+
+	.no_thumb_icon:before,
+	.with_thumb_icon:before {
+		display: inline-block;
+		vertical-align: middle;
+		font-family: FontAwesome;
+		font-style: normal;
+		font-weight: normal;
+		line-height: 1;
+		-webkit-font-smoothing: antialiased;
+		-moz-osx-font-smoothing: grayscale;
+		z-index: 3;
+	}
+
+	.with_thumb_icon:before {
+		font-size: 18px;
+	}
+
+	.no_thumb_icon:before {
+		font-size: 78px;
+	}
+
+	.from_the_blog_item.standard .with_thumb_icon {
+		display: none;
+	}
+
+	.no-thumb.standard .no_thumb_icon:before {
+		content: "\f15c";
+	}
+
+	.no_thumb.status .no_thumb_icon:before,
+	.from_the_blog_item.status .with_thumb_icon:before 
+	{
+		content: "\f075";
+	}
+
+	.no_thumb.link .no_thumb_icon:before,
+	.from_the_blog_item.link .with_thumb_icon:before
+	{
+		content: "\f0c1";
+	}
+
+	.no_thumb.video .no_thumb_icon:before,
+	.from_the_blog_item.video .with_thumb_icon:before
+	{
+		content: "\f16a";
+	}
+
+	.no_thumb.audio .no_thumb_icon:before,
+	.from_the_blog_item.audio .with_thumb_icon:before
+	{
+		content: "\f001";
+	}
+
+	.no_thumb.aside .no_thumb_icon:before,
+	.from_the_blog_item.aside .with_thumb_icon:before
+	{
+		content: "\f15b";
+	}
+
+	.no_thumb.quote .no_thumb_icon:before,
+	.from_the_blog_item.quote .with_thumb_icon:before
+	{
+		content: "\f10d";
+	}
+
+	.no_thumb.image .no_thumb_icon:before,
+	.from_the_blog_item.image .with_thumb_icon:before
+	{
+		content: "\f03e";
+	}
+
+	.no_thumb.gallery .no_thumb_icon:before,
+	.from_the_blog_item.gallery .with_thumb_icon:before
+	{
+		content: "\f00a";
+	}
+
+	.no_thumb .from_the_blog_img
+	{
+		line-height: 245px;
+	}
+
+	.from_the_blog_noimg
+	{
+		background: #f5f5f5;
+		height: 245px;
+		width: 100%;
+		display: block;
+	}
 }
 
-.from_the_blog_item:hover .from_the_blog_overlay
+.boxed-row .wpb_wrapper .from-the-blog-wrapper
 {
-	background: rgba(0,0,0,0.6);
-}
-
-.from_the_blog_img_link
-{
-	display: block;
-	overflow: hidden;
-	position: relative;
-	height: 245px;
-	width: 100%;
-	margin-bottom: 18px;
-	
-	-webkit-mask-image: -webkit-radial-gradient(white, black);
-}	
-
-.from_the_blog_img
-{
-	display: block;
-	position: absolute;
-	width: 100%;
-	height: 100%;
-	background-position: center center;
-	background-size:cover;
-    -webkit-background-size:cover;
-    -moz-background-size:cover;
-    -o-background-size:cover;
-    -ms-background-size:cover;
-	
-	-webkit-transition: all 1s ease;
-	-moz-transition: all 1s ease;
-	transition: all 1s ease;
-}
-
-.from_the_blog_item:hover .from_the_blog_img
-{
-	transform: translateZ(0) scale(1.1,1.1);
-	-moz-transform: translateZ(0) scale(1.1,1.1);
-	-webkit-transform: translateZ(0) scale(1.1,1.1);
-	-ms-transform: none;
-}
-
-.grabbing .from_the_blog_item:hover .from_the_blog_img
-{
-	transform: none;
-	-moz-transform: none;
-	-webkit-transform: none;
-	-ms-transform: none;
-}
-
-.with_thumb_icon {
-	position: absolute;
-	width:50px;
-	height: 50px;
-	display: block;
-	background: #314381;
-	top: 0;
-	left: 0;
-	text-align: center;
-	color: #fff;
-	line-height: 50px;
-	z-index: 3;
-}
-
-.no_thumb_icon {
-	line-height: 245px;
-	text-align: center;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	color: #fff;
-	z-index: 3;
-}
-
-
-.no_thumb_icon:before,
-.with_thumb_icon:before {
-	display: inline-block;
-	vertical-align: middle;
-	font-family: FontAwesome;
-	font-style: normal;
-	font-weight: normal;
-	line-height: 1;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	z-index: 3;
-}
-
-.with_thumb_icon:before {
-	font-size: 18px;
-}
-
-.no_thumb_icon:before {
-	font-size: 78px;
-}
-
-.from_the_blog_item.standard .with_thumb_icon {
-	display: none;
-}
-
-.no-thumb.standard .no_thumb_icon:before {
-	content: "\f15c";
-}
-
-.no_thumb.status .no_thumb_icon:before,
-.from_the_blog_item.status .with_thumb_icon:before 
-{
-	content: "\f075";
-}
-
-.no_thumb.link .no_thumb_icon:before,
-.from_the_blog_item.link .with_thumb_icon:before
-{
-	content: "\f0c1";
-}
-
-.no_thumb.video .no_thumb_icon:before,
-.from_the_blog_item.video .with_thumb_icon:before
-{
-	content: "\f16a";
-}
-
-.no_thumb.audio .no_thumb_icon:before,
-.from_the_blog_item.audio .with_thumb_icon:before
-{
-	content: "\f001";
-}
-
-.no_thumb.aside .no_thumb_icon:before,
-.from_the_blog_item.aside .with_thumb_icon:before
-{
-	content: "\f15b";
-}
-
-.no_thumb.quote .no_thumb_icon:before,
-.from_the_blog_item.quote .with_thumb_icon:before
-{
-	content: "\f10d";
-}
-
-.no_thumb.image .no_thumb_icon:before,
-.from_the_blog_item.image .with_thumb_icon:before
-{
-	content: "\f03e";
-}
-
-.no_thumb.gallery .no_thumb_icon:before,
-.from_the_blog_item.gallery .with_thumb_icon:before
-{
-	content: "\f00a";
-}
-
-.no_thumb .from_the_blog_img
-{
-	line-height: 245px;
-}
-
-.from_the_blog_noimg
-{
-	background: #f5f5f5;
-	height: 245px;
-	width: 100%;
-	display: block;
-}
-
-.wpb_wrapper .from-the-blog-wrapper {
-	margin-top: 0;
-}
-
-.boxed-row .wpb_wrapper .from-the-blog-wrapper {
 	margin: 0px -30px 0px;
 }
 
 /* min-width 1023px, large screens */
 @media only screen and (min-width: 63.9375em) {
-	.boxed-row .wpb_wrapper .from-the-blog-wrapper {
+	
+	.boxed-row .wpb_wrapper .from-the-blog-wrapper
+	{
 		margin: 0px -15px 0px;
 	}
 }
