--- a/includes/gbt-blocks/social_media_profiles/assets/scss/editor.scss
+++ b/includes/gbt-blocks/social_media_profiles/assets/scss/editor.scss
@@ -11,13 +11,15 @@
 }
 
 .gbt_18_mt_social_media_profiles {
-	ul {
+	ul.mt_social_icons_list {
+        margin-left: 0;
+        padding-left: 0;
 
-		&.right {
+		&.align-right {
 			text-align: right;
 		}
 
-		&.center {
+		&.align-center {
 			text-align: center;
 		}
 
