--- a/includes/social-media/assets/css/social-media.css
+++ b/includes/social-media/assets/css/social-media.css
@@ -29,19 +29,19 @@
   -ms-flex-negative: 0;
   flex-shrink: 0;
   text-align: center;
-  margin: 5px 0 0 0;
+  margin: 0;
   max-width: 260px; }
   #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list {
-    line-height: 1.8em;
+    line-height: 1;
     list-style: none;
     margin: 0;
     padding: 0 0 0 20px;
     overflow: auto; }
     #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon {
-      padding: 8px 7px 7px 7px;
+      padding: 11px 7px 4px 7px;
       float: left; }
       #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon:last-child {
-        padding: 8px 0 7px 7px; }
+        padding: 11px 0 4px 7px; }
 
 .offcanvas-left-content .site-social-icons-shortcode {
   margin: 0; }
