--- a/includes/social-media/assets/scss/social-media.scss
+++ b/includes/social-media/assets/scss/social-media.scss
@@ -49,12 +49,12 @@
 	    order: 2;
 	    flex-shrink: 0;
         text-align: center;
-    	margin: 5px 0 0 0;
+    	margin: 0;
 	    max-width: 260px;
 
     	ul.mt_social_icons_list
     	{
-		    line-height: 1.8em;
+		    line-height: 1;
 		    list-style: none;
 		    margin: 0;
 		    padding: 0 0 0 20px;
@@ -62,12 +62,12 @@
 
 		    li.mt_social_icon
 		    {
-	    	    padding: 8px 7px 7px 7px;
+	    	    padding: 11px 7px 4px 7px;
     			float: left;
 
     			&:last-child
     			{
-				    padding: 8px 0 7px 7px;
+				    padding: 11px 0 4px 7px;
 				}
 		    }
     	}
