--- a/includes/social-media/assets/css/social-media.css
+++ b/includes/social-media/assets/css/social-media.css
@@ -38,8 +38,14 @@
     padding: 0 0 0 20px;
     overflow: auto; }
     #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon {
-      padding: 11px 7px 4px 7px;
+      padding: 12px 7px 5px 7px;
       float: left; }
+      #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon a {
+        vertical-align: middle; }
+        #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon a svg {
+          -webkit-transition: all .3s ease;
+          -o-transition: all .3s ease;
+          transition: all .3s ease; }
       #site-top-bar .site-social-icons-shortcode ul.mt_social_icons_list li.mt_social_icon:last-child {
         padding: 11px 0 4px 7px; }
 
