--- a/includes/social-media/assets/scss/social-media.scss
+++ b/includes/social-media/assets/scss/social-media.scss
@@ -62,8 +62,16 @@
 
 		    li.mt_social_icon
 		    {
-	    	    padding: 11px 7px 4px 7px;
+	    	    padding: 12px 7px 5px 7px;
     			float: left;
+
+				a {
+				    vertical-align: middle;
+
+					svg {
+						transition: all .3s ease;
+					}
+				}
 
     			&:last-child
     			{
