--- a/includes/addons/assets/css/wc-category-header-image.css
+++ b/includes/addons/assets/css/wc-category-header-image.css
@@ -1,7 +1,7 @@
 .category_header.with_featured_img {
   color: #fff;
   margin-top: 0;
-  padding: 100px 0 50px 0; }
+  padding: 100px 0; }
   .category_header.with_featured_img h1,
   .category_header.with_featured_img .woocommerce-breadcrumb a {
     color: #fff; }
@@ -11,5 +11,7 @@
       color: #fff;
       opacity: .45; }
   .category_header.with_featured_img .term-description {
-    margin: 25px 0 50px 0;
+    margin: 25px 0 0 0;
     position: relative; }
+    .category_header.with_featured_img .term-description > p {
+      margin-bottom: 0; }
