--- a/includes/addons/assets/scss/wc-category-header-image.scss
+++ b/includes/addons/assets/scss/wc-category-header-image.scss
@@ -1,7 +1,7 @@
 .category_header.with_featured_img {
     color: #fff;
     margin-top: 0;
-    padding: 100px 0 50px 0;
+    padding: 100px 0;
 
     h1,
     .woocommerce-breadcrumb a {
@@ -18,7 +18,11 @@
     }
 
     .term-description {
-        margin: 25px 0 50px 0;
+        margin: 25px 0 0 0;
         position: relative;
+
+        > p {
+            margin-bottom: 0;
+        }
     }
 }
