--- a/includes/gbt-blocks/posts_grid/assets/css/backend/editor.css
+++ b/includes/gbt-blocks/posts_grid/assets/css/backend/editor.css
@@ -71,5 +71,6 @@
     width: 100%;
     display: block; }
 
-.wp-block[data-type="getbowtied/mt-posts-grid"][data-align="full"] .gbt_18_mt_posts_grid {
+.wp-block[data-type="getbowtied/mt-posts-grid"][data-align="full"] .gbt_18_mt_posts_grid,
+.block-editor-block-list__block[data-type="getbowtied/mt-posts-grid"][data-align="full"] .gbt_18_mt_posts_grid {
   padding: 0 30px; }
