--- a/includes/gbt-blocks/posts_grid/assets/scss/backend/editor.scss
+++ b/includes/gbt-blocks/posts_grid/assets/scss/backend/editor.scss
@@ -81,7 +81,8 @@
 	}
 }
 
-.wp-block[data-type="getbowtied/mt-posts-grid"][data-align="full"] {
+.wp-block[data-type="getbowtied/mt-posts-grid"][data-align="full"],
+.block-editor-block-list__block[data-type="getbowtied/mt-posts-grid"][data-align="full"] {
 	.gbt_18_mt_posts_grid {
 		padding: 0 30px;
 	}
