--- a/includes/gbt-blocks/posts_slider/assets/scss/editor.scss
+++ b/includes/gbt-blocks/posts_slider/assets/scss/editor.scss
@@ -122,7 +122,8 @@
 	}
 }
 
-.wp-block[data-type="getbowtied/mt-posts-slider"] {
+.wp-block[data-type="getbowtied/mt-posts-slider"],
+.block-editor-block-list__block[data-type="getbowtied/mt-posts-slider"] {
 	&.is-selected,
 	&.is-hovered {
 		.swiper-button-next, .swiper-button-prev {
